cp file to root of repo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,9 @@ jobs:
           HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
         run: |
           DARWIN_SHA256=$(cat bw-cli-darwin-arm64.tar.gz.sha256 | cut -d ' ' -f 1)
+
+          git clone https://x-access-token:${HOMEBREW_TAP_GITHUB_TOKEN}@github.com/alexalbu001/homebrew-bw-cli.git
+          cd homebrew-bw-cli
           
           cat > bw-cli.rb <<EOL
           class BwCli < Formula
@@ -97,8 +100,10 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
           git clone https://x-access-token:${HOMEBREW_TAP_GITHUB_TOKEN}@github.com/alexalbu001/homebrew-bw-cli.git
-          cp bw-cli.rb homebrew-bw-cli/Formula/
-          cd homebrew-bw-cli
-          git add Formula/bw-cli.rb
-          git commit -m "Update bw-cli to ${VERSION}"
+          cp bw-cli.rb homebrew-bw-cli/
+          git add bw-cli.rb
+          git commit -m "Update bw-cli to ${VERSION} - $(date +'%Y-%m-%d')"
           git push
+
+          cd ..
+          rm -rf homebrew-bw-cli
